@@ -1,3 +1,8 @@
+2007-03-18  Christian Persch  <chpe@gnome.org>
+
+	* sound-properties-capplet.c: (create_dialog), (main): Initialise
+	threads early, and fix option context translation. Bug #416239.
+
 2007-02-10  Jens Granseuer  <jensgr@gmx.net>
 
 	Patch by: Patrick Wade <patrick.wade@sun.com>
